<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tutorial_category_hidden">Hidden subsets</string>
    <string name="tutorial_category_naked">Naked subsets</string>
    <string name="tutorial_category_locked_candidates">Locked candidates</string>
    <string name="tutorial_category_fish">Fish</string>
    <string name="tutorial_category_single_digit">Single-digit techniques</string>
    <string name="tutorial_category_chains">Chaining techniques</string>
    <string name="tutorial_category_uniqueness">Uniqueness techniques</string>

</resources>
