<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="game_hint_open_tutorial">Open %1$s tutorial</string>
    <string name="tutorial_category_singles">Singles</string>
    <string name="tutorial_category_wings">Wings</string>
    <string name="tutorial_category_remote_pairs">Remote pairs</string>
    <string name="tutorial_category_coloring">Coloring</string>
    <string name="tutorial_category_forcing">Forcing chains and nets</string>
    <string name="tutorial_category_sue_de_coq">Sue de Coq</string>
...
